# SDL2_Project_Starter

./: CMakeLists.txt  README.md  main.cpp
Game/: game.cpp  game.h
Game/GameObject/: GameObject.cpp  GameObject.h
Game/TextureManager/: TextureManager.cpp  TextureManager.h
Game/Utilities/: Counters.cpp  Counters.h
